--- a/html/index.html
+++ b/html/index.html
@@ -163,49 +163,19 @@
     </div>
     
     <div id='wallet' class='togSettingsRad1'>
-      <div class='handle'>
-        <input type='radio' name='togWallet' id='togWalletRad1' checked>
-        <label for='togWalletRad1'>
-          <ul>
-            <li class='leftend'>
-              <div>
-                <i class='fas open'>&#xf103;</i>
-              </div><!-- must have no gap between elements here --><div>
-                <i class='fas close'>&#xf103;</i>
-              </div>
-            </li>
-            <li> Wallet </li>
-            <li class='rightend'>
-              <div>
-                <i class='fas open'>&#xf103;</i>
-              </div><!-- must have no gap between elements here --><div>
-                <i class='fas close'>&#xf103;</i>
-              </div>
-            </li>
-          </ul>
-        </label><!--
-        <input type='radio' name='togWallet' id='togWalletRad2'>
-        <label for='togWalletRad2'>
-          <ul>
-            <li class='leftend'>
-              <div>
-                <i class='fas open'>&#xf103;</i>
-              </div>!-- must have no gap between elements here --<div>
-                <i class='fas close'>&#xf103;</i>
-              </div>
-            </li>
-            <li> Wallet </li>
-            <li class='rightend'>
-              <div>
-                <i class='fas open'>&#xf103;</i>
-              </div>!-- must have no gap between elements here --<div>
-                <i class='fas close'>&#xf103;</i>
-              </div>
-            </li>
-          </ul>
-        </label>-->
-      </div>
-      <div class='panel togWalletRad1'>
+      <input type='radio' name='togWallet' id='togWalletRad' checked>
+      <label for='togWalletRad' class='handle'>
+        <ul>
+          <li class='leftend'>
+            <i class='fas open'>&#xf103;</i><i class='fas close'>&#xf103;</i>
+          </li>
+          <li> Wallet </li>
+          <li class='rightend'>
+            <i class='fas open'>&#xf103;</i><i class='fas close'>&#xf103;</i>
+          </li>
+        </ul>
+      </label>
+      <div class='panel togWalletRad'>
         <p>Wallet Content ... More Wallet Content ... More Wallet Content ... </p>
       </div>
     </div>
