--- a/html/index.html
+++ b/html/index.html
@@ -119,10 +119,10 @@
           <li>
             <div>
               <input type='radio' name='togITTs' id='togITTsRad1' checked>
-              <label for='togITTsRad1'><i class='fas open'>&#xf103;</i></label>
+              <label for='togITTsRad1'><i class='fas up'>&#xf103;</i></label>
             </div><!-- must have no gap between elements here --><div>
               <input type='radio' name='togITTs' id='togITTsRad2'>
-              <label for='togITTsRad2'><i class='fas close'>&#xf103;</i></label>
+              <label for='togITTsRad2'><i class='fas dn'>&#xf103;</i></label>
             </div>
           </li>
           <li> ITTs </li>
@@ -139,11 +139,11 @@
           <li>
             <div>
               <input type='radio' name='togPOIs' id='togPOIsRad1' checked>
-              <label for='togPOIsRad1'><i class='fas open'>&#xf103;</i></label>
+              <label for='togPOIsRad1'><i class='fas up'>&#xf103;</i></label>
               <!-- nesting the panel here is an option for pure CSS toggling -->
             </div><!-- must have no gap between elements here --><div>
               <input type='radio' name='togPOIs' id='togPOIsRad2'>
-              <label for='togPOIsRad2'><i class='fas close'>&#xf103;</i></label>
+              <label for='togPOIsRad2'><i class='fas dn'>&#xf103;</i></label>
             </div>
           </li>
           <li> POIs </li>
@@ -163,19 +163,19 @@
     </div>
     
     <div id='wallet' class='togSettingsRad1'>
-      <input type='radio' name='togWallet' id='togWalletRad' checked>
+      <input type='checkbox' name='togWallet' id='togWalletRad' checked>
       <label for='togWalletRad' class='handle'>
         <ul>
           <li class='leftend'>
-            <i class='fas open'>&#xf103;</i><i class='fas close'>&#xf103;</i>
+            <i class='fas up'>&#xf103;</i><i class='fas dn'>&#xf103;</i>
           </li>
           <li> Wallet </li>
           <li class='rightend'>
-            <i class='fas open'>&#xf103;</i><i class='fas close'>&#xf103;</i>
+            <i class='fas up'>&#xf103;</i><i class='fas dn'>&#xf103;</i>
           </li>
         </ul>
       </label>
-      <div class='panel togWalletRad'>
+      <div class='panel'>
         <p>Wallet Content ... More Wallet Content ... More Wallet Content ... </p>
       </div>
     </div>
