Clean Up Code (Part 1)
* Remove ghosts
* Rename ids & classes in HTML file (to follow a naming scheme)
* Update CSS file to corroborate

--- a/html/index.html
+++ b/html/index.html
@@ -96,10 +96,14 @@
         <li>
           <div>
             <input type='radio' name='togSettings' id='togSettingsRad1' checked>
-            <label for='togSettingsRad1'><i class='fas top'>&#xf2d0;</i></label>
+            <label for='togSettingsRad1'>
+              <i class='fas barTop'>&#xf2d0;</i>
+            </label>
           </div><!-- must have no gap between elements here --><div>
             <input type='radio' name='togSettings' id='togSettingsRad2'>
-            <label for='togSettingsRad2'><i class='fas bottom'>&#xf2d0;</i></label>
+            <label for='togSettingsRad2'>
+              <i class='fas barBot'>&#xf2d0;</i>
+            </label>
           </div>
         </li>
         <!-- add others later -->
@@ -117,12 +121,12 @@
     <div id='dresserRgt' class='togSettingsRad1'>
       <!-- TOP DRAWER -->
       <div id='pois' class='drawerTop'>
-        <input type='checkbox' name='togPOIs' id='togPOIsRad' checked>
-        <label for='togPOIsRad' class='handle'>
+        <input type='checkbox' name='togPOIs' id='togPOIsChk' checked>
+        <label for='togPOIsChk' class='handle'>
           <ul>
-            <li class='leftend'><i class='fas'>&#xf103;</i></li>
+            <li class='endLft'><i class='fas'>&#xf103;</i></li>
             <li> POIs </li>
-            <li class='rightend'><i class='fas'>&#xf103;</i></li>
+            <li class='endRgt'><i class='fas'>&#xf103;</i></li>
           </ul>
         </label>
         <div class='panel'>
@@ -132,18 +136,14 @@
           </p>
         </div>
       </div>
-      <!-- GHOST DRAWER --><!--
-      <div id='ghostright'>
-        <label class='handle'><ul><li>&nbsp;</li></ul></label>
-      </div>-->
       <!-- BOTTOM DRAWER -->
       <div id='itts' class='drawerBot'>
-        <input type='checkbox' name='togITTs' id='togITTsRad' checked>
-        <label for='togITTsRad' class='handle'>
+        <input type='checkbox' name='togITTs' id='togITTsChk' checked>
+        <label for='togITTsChk' class='handle'>
           <ul>
-            <li class='leftend'><i class='fas'>&#xf103;</i></li>
+            <li class='endLft'><i class='fas'>&#xf103;</i></li>
             <li> ITTs </li>
-            <li class='rightend'><i class='fas'>&#xf103;</i></li>
+            <li class='endRgt'><i class='fas'>&#xf103;</i></li>
           </ul>
         </label>
         <div class='panel'>
@@ -157,12 +157,12 @@
     <div id='dresserLft' class='togSettingsRad1'>
       <!-- TOP DRAWER -->
       <div id='wallet' class='drawerTop'>
-        <input type='checkbox' name='togWallet' id='togWalletRad' checked>
-        <label for='togWalletRad' class='handle'>
+        <input type='checkbox' name='togWallet' id='togWalletChk' checked>
+        <label for='togWalletChk' class='handle'>
           <ul>
-            <li class='leftend'><i class='fas'>&#xf103;</i></li>
+            <li class='endLft'><i class='fas'>&#xf103;</i></li>
             <li> Wallet </li>
-            <li class='rightend'><i class='fas'>&#xf103;</i></li>
+            <li class='endRgt'><i class='fas'>&#xf103;</i></li>
           </ul>
         </label>
         <div class='panel'>
@@ -172,18 +172,14 @@
           </p>
         </div>
       </div>
-      <!-- GHOST DRAWER --><!--
-      <div id='ghostleft'>
-        <label class='handle'><ul><li>&nbsp;</li></ul></label>
-      </div>-->
       <!-- BOTTOM DRAWER -->
       <div id='beacon' class='drawerBot'>
-        <input type='checkbox' name='togBeacon' id='togBeaconRad' checked>
-        <label for='togBeaconRad' class='handle'>
+        <input type='checkbox' name='togBeacon' id='togBeaconChk' checked>
+        <label for='togBeaconChk' class='handle'>
           <ul>
-            <li class='leftend'><i class='fas'>&#xf103;</i></li>
+            <li class='endLft'><i class='fas'>&#xf103;</i></li>
             <li> Beacon </li>
-            <li class='rightend'><i class='fas'>&#xf103;</i></li>
+            <li class='endRgt'><i class='fas'>&#xf103;</i></li>
           </ul>
         </label>
         <div class='panel'>
