--- a/html/index.html
+++ b/html/index.html
@@ -93,7 +93,7 @@
     <div id='settings' class='togSettingsRad1'>
       <ul>
         <li>Settings Bar:</li>
-        <li>
+        <li title='Move Settings Bar'>
           <div>
             <input type='radio' name='togSettings' id='togSettingsRad1' checked>
             <label for='togSettingsRad1'>
@@ -106,8 +106,15 @@
             </label>
           </div>
         </li>
-        <!-- add others later -->
-        <li><i class='fas'>&#xf53f;</i></li>
+        <li title='Set Theme'><i class='fas'>&#xf53f;</i></li>
+        <li title='Integrate Wallet'><i class='fas'>&#xf555;</i></li>
+        <li title='Synchronize Node'><i class='fas'>&#xf2f1;</i></li>
+        <li title='Subscribe to Topics (Listen for Token Pairs)'>
+          <i class='fas'>&#xf550;</i>
+        </li>
+        <!-- add more here -->
+        <li title='View Documentation'><i class='fas'>&#xf059;</i></li>
+        <li title='View Terms of Use'><i class='fas'>&#xf70e;</i></li>
       </ul>
     </div>
     <!-- FLOOR RUG -->
@@ -122,7 +129,7 @@
       <!-- TOP DRAWER -->
       <div id='pois' class='drawerTop'>
         <input type='checkbox' name='togPOIs' id='togPOIsChk' checked>
-        <label for='togPOIsChk' class='handle'>
+        <label for='togPOIsChk' class='handle' title='Open/Shut Drawer'>
           <ul>
             <li class='endLft'><i class='fas'>&#xf103;</i></li>
             <li> POIs </li>
@@ -139,7 +146,7 @@
       <!-- BOTTOM DRAWER -->
       <div id='itts' class='drawerBot'>
         <input type='checkbox' name='togITTs' id='togITTsChk' checked>
-        <label for='togITTsChk' class='handle'>
+        <label for='togITTsChk' class='handle' title='Open/Shut Drawer'>
           <ul>
             <li class='endLft'><i class='fas'>&#xf103;</i></li>
             <li> ITTs </li>
@@ -158,7 +165,7 @@
       <!-- TOP DRAWER -->
       <div id='wallet' class='drawerTop'>
         <input type='checkbox' name='togWallet' id='togWalletChk' checked>
-        <label for='togWalletChk' class='handle'>
+        <label for='togWalletChk' class='handle' title='Open/Shut Drawer'>
           <ul>
             <li class='endLft'><i class='fas'>&#xf103;</i></li>
             <li> Wallet </li>
@@ -175,7 +182,7 @@
       <!-- BOTTOM DRAWER -->
       <div id='beacon' class='drawerBot'>
         <input type='checkbox' name='togBeacon' id='togBeaconChk' checked>
-        <label for='togBeaconChk' class='handle'>
+        <label for='togBeaconChk' class='handle' title='Open/Shut Drawer'>
           <ul>
             <li class='endLft'><i class='fas'>&#xf103;</i></li>
             <li> Beacon </li>
