Rename CSS Custom Properties
Also made default behavior for panels unchecked (shut)
except for the Wallet panel.

--- a/html/index.html
+++ b/html/index.html
@@ -108,6 +108,9 @@
         </li>
         <li title='Set Theme'><i class='fas'>&#xf53f;</i></li>
         <li title='Integrate Wallet'><i class='fas'>&#xf555;</i></li>
+        <li title='Deploy Smart Contract (Choose Your Wagon Train)'>
+          <i class='fas'>&#xf5b6;</i>
+        </li>
         <li title='Synchronize Node'><i class='fas'>&#xf2f1;</i></li>
         <li title='Subscribe to Topics (Listen for Token Pairs)'>
           <i class='fas'>&#xf550;</i>
@@ -128,7 +131,7 @@
     <div id='dresserRgt' class='togSettingsRad1'>
       <!-- TOP DRAWER -->
       <div id='pois' class='drawerTop'>
-        <input type='checkbox' name='togPOIs' id='togPOIsChk' checked>
+        <input type='checkbox' name='togPOIs' id='togPOIsChk'>
         <label for='togPOIsChk' class='handle' title='Open/Shut Drawer'>
           <ul>
             <li class='endLft'><i class='fas'>&#xf103;</i></li>
@@ -145,7 +148,7 @@
       </div>
       <!-- BOTTOM DRAWER -->
       <div id='itts' class='drawerBot'>
-        <input type='checkbox' name='togITTs' id='togITTsChk' checked>
+        <input type='checkbox' name='togITTs' id='togITTsChk'>
         <label for='togITTsChk' class='handle' title='Open/Shut Drawer'>
           <ul>
             <li class='endLft'><i class='fas'>&#xf103;</i></li>
@@ -181,7 +184,7 @@
       </div>
       <!-- BOTTOM DRAWER -->
       <div id='beacon' class='drawerBot'>
-        <input type='checkbox' name='togBeacon' id='togBeaconChk' checked>
+        <input type='checkbox' name='togBeacon' id='togBeaconChk'>
         <label for='togBeaconChk' class='handle' title='Open/Shut Drawer'>
           <ul>
             <li class='endLft'><i class='fas'>&#xf103;</i></li>
