--- a/html/index.html
+++ b/html/index.html
@@ -90,6 +90,12 @@
 </head>
 <body>
   <div id='FAKEROOT'>
+    <!-- Summary of Ethereum components:
+         - Contracts: decentralized logic
+         - Swarm: decentralized storage
+         - Whisper: decentralized messaging
+         Reference: https://medium.com/caelumlabs/whisper-shh-bc5416ec0046
+      -->
     <div id='settings' class='togSettingsRad1'>
       <ul>
         <li>Settings Bar:</li>
@@ -106,18 +112,35 @@
             </label>
           </div>
         </li>
-        <li title='Set Theme'><i class='fas'>&#xf53f;</i></li>
-        <li title='Integrate Wallet'><i class='fas'>&#xf555;</i></li>
-        <li title='Deploy Smart Contract (Choose Your Wagon Train)'>
+        <li title='Set Theme'>
+          <i class='fas'>&#xf53f;</i>
+        </li>
+        <li title='Integrate Wallet&#10;(Currently MetaMask)'>
+          <i class='fas'>&#xf555;</i>
+        </li>
+        <li title='Deploy Smart Contract&#10;(Currently <<address>>)'>
+          <!-- Decentralized smart contract deployment, choose address -->
           <i class='fas'>&#xf5b6;</i>
         </li>
-        <li title='Synchronize Node'><i class='fas'>&#xf2f1;</i></li>
-        <li title='Subscribe to Topics (Listen for Token Pairs)'>
+        <li title='Synchronize Node&#10;(Currently Infura)'>
+          <!-- Will add option to sync to Beacon node in a future version -->
+          <!-- Will add option to sync to local  node in a future version -->
+          <i class='fas'>&#xf2f1;</i>
+        </li>
+        <li title='Subscribe to Topics&#10;(Listen for Token Pairs)'>
+          <!-- Whisper allows you to opt in to message "topics" -->
+          <!-- Each token pair will have its own "topic in Beacon -->
           <i class='fas'>&#xf550;</i>
         </li>
         <!-- add more here -->
-        <li title='View Documentation'><i class='fas'>&#xf059;</i></li>
-        <li title='View Terms of Use'><i class='fas'>&#xf70e;</i></li>
+        <li title='View Documentation'>
+          <!-- Maybe iframe this in a push panel? -->
+          <i class='fas'>&#xf059;</i>
+        </li>
+        <li title='View Terms of Use'>
+          <!-- Maybe iframe this in a modal? -->
+          <i class='fas'>&#xf70e;</i>
+        </li>
       </ul>
     </div>
     <!-- FLOOR RUG -->
@@ -128,6 +151,43 @@
       </div>
     </div>
     <!-- DRESSERs -->
+    <div id='dresserLft' class='togSettingsRad1'>
+      <!-- TOP DRAWER -->
+      <div id='wallet' class='drawerTop'>
+        <input type='checkbox' name='togWallet' id='togWalletChk' checked>
+        <label for='togWalletChk' class='handle' title='Open/Shut Drawer'>
+          <ul>
+            <li class='endLft'><i class='fas'>&#xf103;</i></li>
+            <li> Wallet </li>
+            <li class='endRgt'><i class='fas'>&#xf103;</i></li>
+          </ul>
+        </label>
+        <div class='panel'>
+          <!-- Reference: https://github.com/ethereum/wiki/wiki/JSON-RPC -->
+          <p>Wallet Content ... More
+             Wallet Content ... More
+             Wallet Content ...
+          </p>
+        </div>
+      </div>
+      <!-- BOTTOM DRAWER -->
+      <div id='beacon' class='drawerBot'>
+        <input type='checkbox' name='togBeacon' id='togBeaconChk'>
+        <label for='togBeaconChk' class='handle' title='Open/Shut Drawer'>
+          <ul>
+            <li class='endLft'><i class='fas'>&#xf103;</i></li>
+            <li> Beacon </li>
+            <li class='endRgt'><i class='fas'>&#xf103;</i></li>
+          </ul>
+        </label>
+        <div class='panel'>
+          <p>Beacon Content ... More
+             Beacon Content ... More
+             Beacon Content ...
+          </p>
+        </div>
+      </div>
+    </div>
     <div id='dresserRgt' class='togSettingsRad1'>
       <!-- TOP DRAWER -->
       <div id='pois' class='drawerTop'>
@@ -157,46 +217,41 @@
           </ul>
         </label>
         <div class='panel'>
-          <p>ITTs Content ... More
-             ITTs Content ... More
-             ITTs Content ...
-          </p>
-        </div>
-      </div>
-    </div>
-    <div id='dresserLft' class='togSettingsRad1'>
-      <!-- TOP DRAWER -->
-      <div id='wallet' class='drawerTop'>
-        <input type='checkbox' name='togWallet' id='togWalletChk' checked>
-        <label for='togWalletChk' class='handle' title='Open/Shut Drawer'>
-          <ul>
-            <li class='endLft'><i class='fas'>&#xf103;</i></li>
-            <li> Wallet </li>
-            <li class='endRgt'><i class='fas'>&#xf103;</i></li>
-          </ul>
-        </label>
-        <div class='panel'>
-          <p>Wallet Content ... More
-             Wallet Content ... More
-             Wallet Content ...
-          </p>
-        </div>
-      </div>
-      <!-- BOTTOM DRAWER -->
-      <div id='beacon' class='drawerBot'>
-        <input type='checkbox' name='togBeacon' id='togBeaconChk'>
-        <label for='togBeaconChk' class='handle' title='Open/Shut Drawer'>
-          <ul>
-            <li class='endLft'><i class='fas'>&#xf103;</i></li>
-            <li> Beacon </li>
-            <li class='endRgt'><i class='fas'>&#xf103;</i></li>
-          </ul>
-        </label>
-        <div class='panel'>
-          <p>Beacon Content ... More
-             Beacon Content ... More
-             Beacon Content ...
-          </p>
+          <input type='checkbox' name='togAddITT' id='togAddITTChk'>
+          <label for='togAddITTChk' class='btn acc'>Add ITT</label>
+          <form> <!-- input types can be number/range as appropriate -->
+            <table>
+              <tr>
+                <td><label for='ITTamt'>Amount:</label></td>
+                <td><input id='ITTamt' name='ITTamt' type='text'></td>
+              </tr>
+              <tr>
+                <td><label for='ITTforFee'>Forfeiture Fee:</label></td>
+                <td><input id='ITTforFee' name='ITTforFee' type='text'></td>
+              </tr>
+              <tr>
+                <td><label for='ITTchPer'>Challenge Period:</label></td>
+                <td><input id='ITTchPer' name='ITTchPer' type='text'></td>
+              </tr>
+            </table>
+            <!--
+            <label for='ITTamt'>Amount:</label>
+            <input id='ITTamt' name='ITTamt' type='text'><br>
+            <label for='ITTforFee'>Forfeiture Fee:</label>
+            <input id='ITTforFee' name='ITTforFee' type='text'><br>
+            <label for='ITTchPer'>Challenge Period:</label>
+            <input id='ITTchPer' name='ITTchPer' type='text'><br>
+              -->
+            <!--
+            <label for='ITTpartFill'>Enable Partial Fills?</label>
+            <input id='ITTpartFill' name='ITTpartFill' type='checkbox' disabled><br>
+              -->
+            <input type="submit" value="Submit" class='btn'>
+          </form>
+          <ul><!-- Option to toggle between verical & horizontal layout -->
+            <li>Outstanding ITTs:</li>
+            <li>Filled ITTs:</li>
+          </ul><!-- Option to switch between tabs vs side-by-side views -->
         </div>
       </div>
     </div>
