--- a/html/index.html
+++ b/html/index.html
@@ -153,7 +153,7 @@
       </div>
     </div>
     <!-- DRESSERs -->
-    <div id='dresserLft' class='togSettingsRad1'>
+    <div id='dresserLft' class='togSettingsRad1'><!-- Accounts (Addresses) -->
       <!-- TOP DRAWER -->
       <div id='wallet' class='drawerTop'>
         <input type='checkbox' name='togWallet' id='togWalletChk' checked>
@@ -166,9 +166,28 @@
         </label>
         <div class='panel'>
           <!-- Reference: https://github.com/ethereum/wiki/wiki/JSON-RPC -->
+          <!-- Reference: https://metamask.github.io/metamask-docs/ -->
           <ul>
             <li>Deposit Amount into Beacon Smart Contract</li>
+            <ul>
+              <li>Choose Account: [Drop-Down]Choose... Add Account</li>
+              <li>Choose Token: [Drop-Down]Choose... Add Token (Current Balance)</li>
+              <li>Choose Amount: [Textfield?]</li>
+              <li>Choose Gas Price: [Textfield?]</li>
+              <li>Choose Gas Limit: [Textfield?]</li>
+              <li>To Target Address: [auto populate deploy address]</li>
+              <li>Preview</li>
+            </ul>
             <li>Complete Withdrawal from Beacon Smart Contract</li>
+            <ul>
+              <li>From Target Address: [auto populate deploy address]</li>
+              <li>Choose Token: [Drop-Down]Choose... Add Token (Current Balance)</li>
+              <li>Choose Amount: [Textfield?]</li>
+              <li>Choose Account: [Drop-Down]Choose... Add Account</li>
+              <li>Choose Gas Price: [Textfield?]</li>
+              <li>Choose Gas Limit: [Textfield?]</li>
+              <li>Preview</li>
+            </ul>
           </ul>
         </div>
       </div>
@@ -193,14 +212,53 @@
         </div>
       </div>
     </div>
-    <div id='dresserRgt' class='togSettingsRad1'>
+    <div id='dresserRgt' class='togSettingsRad1'><!-- Negotiations -->
       <!-- TOP DRAWER -->
       <div id='pois' class='drawerTop'>
         <input type='checkbox' name='togPOIs' id='togPOIsChk'>
         <label for='togPOIsChk' class='handle' title='Open/Shut Drawer'>
           <ul>
             <li class='endLft'><i class='fas'>&#xf103;</i></li>
-            <li> POIs </li>
+            <li> Challenge </li><!-- On-Chain (gas costs) -->
+            <li class='endRgt'><i class='fas'>&#xf103;</i></li>
+          </ul>
+        </label>
+        <div class='panel'>
+          <ul>
+            <li>Your Challenges on Counterparty ITTs</li>
+            <ul>
+              <li>Status: Awaiting Response from Counterparty</li>
+              <li>Status: Canceled. Forfeiture Fee Available for Claiming.</li>
+              <li>Status: Accepted. Assets Swapped & Available for Claiming.</li>
+            </ul>
+            <li>Counterparty Challenges on Your ITTs</li>
+            <ul>
+              <li>If you choose not to act before the Challenge Period expires,
+                  you will automatically Cancel & Forfeit.
+              </li><!-- Counterparty pays the gas cost for the xfer message. -->
+              <li>Cancel & Forfeit / Accept & Settle</li>
+              <!-- According to the specifications, the reference implementation
+                  deviates from the white paper in that forfeiture fees are
+                  deposited separately from the total offer amount, even though
+                  forfeiture fees are represented as a percentage of the total
+                  offer amount instead of a separate fixed amount.
+                -->
+              <li>Cancel & Forfeit: Your ITT will be canceled, and the
+                  forfeiture fee will be transferred to your counterparty.
+                  Your total offer amount will be unlocked.
+              </li><!-- You pay the gas cost for this message. -->
+              <li>Accept & Settle: Assets will be atomically swapped.</li>
+            </ul>
+          </ul>
+        </div>
+      </div>
+      <!-- BOTTOM DRAWER -->
+      <div id='itts' class='drawerBot'>
+        <input type='checkbox' name='togITTs' id='togITTsChk'>
+        <label for='togITTsChk' class='handle' title='Open/Shut Drawer'>
+          <ul>
+            <li class='endLft'><i class='fas'>&#xf103;</i></li>
+            <li> Engage </li><!-- Off-Chain (ITTs & POIs) -->
             <li class='endRgt'><i class='fas'>&#xf103;</i></li>
           </ul>
         </label>
@@ -214,20 +272,16 @@
             </ul>
             <li>Submit POI on this ITT</li>
             <li>Move to Challenge</li>
+            <li>Outstanding POIs</li>
+            <ul>
+              <li>Waiting for Counterparty</li>
+              <li>Waiting for You</li>
+              <ul>
+                <li>Counteroffer</li>
+                <li>Signed (Submit for Settlment)</li>
+              </ul>
+            </ul>
           </ul>
-        </div>
-      </div>
-      <!-- BOTTOM DRAWER -->
-      <div id='itts' class='drawerBot'>
-        <input type='checkbox' name='togITTs' id='togITTsChk'>
-        <label for='togITTsChk' class='handle' title='Open/Shut Drawer'>
-          <ul>
-            <li class='endLft'><i class='fas'>&#xf103;</i></li>
-            <li> ITTs </li>
-            <li class='endRgt'><i class='fas'>&#xf103;</i></li>
-          </ul>
-        </label>
-        <div class='panel'>
           <input type='checkbox' name='togAddITT' id='togAddITTChk'>
           <label title='Provide Liquidity by Broadcasting an Intent to Trade'
                  for='togAddITTChk' class='btn acc'>Add ITT</label>
@@ -259,7 +313,7 @@
                 <td>
                   <label for='ITTforFee' title='Portion of offer at stake'>
                     Forfeiture Fee (%):
-                  </label>
+                  </label><!-- This is deceptive because it's separate. -->
                 </td>
                 <td><input id='ITTforFee' name='ITTforFee' type='text'></td>
               </tr>
@@ -410,7 +464,7 @@
             </table>
             -->
           </form>
-          <p>Mabye 2 top tabs & 2 side tabs for this?
+          <p>Maybe 2 top tabs & 2 side tabs for this?
             (Can also consider other layouts.)
           </p>
           <ul><!-- Option to toggle between verical & horizontal layout -->
@@ -425,6 +479,10 @@
               <li>Your ITTs:</li><!-- alt: My ITTs-->
             </ul>
           </ul><!-- Option to switch between tabs vs side-by-side views -->
+          <ul>
+            <li>Waiting on Counterparty</li>
+            <li>Waiting on You</li><!-- Counteroffer / Accept (Sign) -->
+          </ul>
         </div>
       </div>
     </div>
